  of 8-bit strings (char* and std::string) has been removed and replaced by
  Java-like Unicode strings (ts::UString). Many interface have been updated.
  The utilities in tsStringUtils have been removed. Equivalent services exist
  in class ts::UString. All of this break the backward compatibility of user
  code. This is unfortunate but TSDuck code is now more robust and faster to
  maintain.

Version 3.4-20171110

- TSDuck now fully handles DVB character sets in signalization. All textual
  display (tsanalyze, tstables, etc.) are produced in UTF-8 format, with
  characters properly translated from DVB character encoding. The table
  compiler, tstabcomp, properly translates from UTF-8 XML files to DVB
  character encoding and vice versa.

- Added options --default-charset and --europe to tspsi, tstables, tstabdump,
  tstabcomp, plugin psi and plugin tables.

- Added t2mi plugin to extract encapsulated TS packets from T2-MI streams
  (DVB-T2 Modulator Interface).

- T2-MI PID's and PLP's are now included in the report from tsanalyze and the
  plugin analyze.

- Improved robustness of DVB tuner detection on Windows. It solves some issues
  with 32-bit tuner filters on 64-bit systems. But older systems, before
  Windows 7 (XP, Vista, etc.), may no longer work. No support will be provided
  for pre-7 Windows systems.

- Added --test option to tslsdvb on Windows.

Version 3.3-20170930

- Added option --default-pds to tspsi, tstables, tstabdump, plugin psi
  and plugin tables.

- Added option --interval to plugin count.

- Fixed timer issues on Linux, typically seen in plugin regulate.

- Removed command tsgentab and associated plugins. This command is now
  obsolete and has been superseded by the more general tstabcomp, the
  PSI/SI table compiler.

Version 3.3-20170915

- Added command tstabcomp, the PSI/SI table compiler from/to XML files.
  The command tsgentab is now deprecated and will be removed in some
  future version.

Version 3.2-20170911
