@@ -18,6 +18,16 @@ Version 3.5
   code. This is unfortunate but TSDuck code is now more robust and faster to
   maintain.
 
+- The "revision" number is no longer a "build date" but a "commit count".
+  With a build date, there was a risk that two identical sets of sources had
+  different revision numbers and that that two different sets of sources had
+  identical revision numbers. The new "commit count" which is automatically
+  generated by git is a global commit count of all branches and is always
+  increased. It represents a set of commited sources. Moreover, each object
+  file contains the revision number at the time of compilation. The downside
+  is that each commit forces a recompilation of everything since the revision
+  is automatically increased.
+
 Version 3.4-20171110
 
 - TSDuck now fully handles DVB character sets in signalization. All textual
